--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jin-mock-chakra",
+  "name": "buisiness-card-application",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -28,9 +28,12 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/babel__core": "^7.20.5",
     "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.10",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/testing-library__react": "^10.0.1",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
